# edu-assistant

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  app.py  compiled_code.txt  docker-compose.yml  extract_codes.py  pyproject.toml  requirements.txt
utils/: extract_codes.py  file_utils.py  llm.py  ocr.py  pdf_processor.py
