[project]
name = "edu-assistant"
version = "0.1.0"
description = "Ferramenta para professores particulares: gerenciamento de PDFs, OCR e geração de planos e exercícios com LLM."
requires-python = ">=3.9"
dependencies = [
    "streamlit>=1.28.0",
    "requests>=2.31.0",
    "python-docx>=1.1.0",
    "fpdf>=1.7.2",
    "python-dotenv>=1.0.0",
    "pypdf2>=3.0.1",
    "pymupdf>=1.26.5",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pytest>=7.0",
]
