[project]
name = "edu-assistant"
version = "0.1.0"
description = "Ferramenta para professores particulares: gerenciamento de PDFs, OCR e geração de planos e exercícios com LLM."
requires-python = ">=3.9"
dependencies = [
    "streamlit>=1.28.0",
    "requests>=2.31.0",
    "python-docx>=1.1.0",
    "fpdf2>=2.7.0",
    "python-dotenv>=1.0.0",
    "pypdf2>=3.0.1",
    "pymupdf>=1.26.5",
    "pytesseract>=0.3.10",
    "Pillow>=10.0.0",
    "python-pptx>=0.6.21",
    "reportlab>=4.0.0",
    "pypandoc>=1.14"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = ["pytest>=7.0"]