[project]
name = "edu-assistant"
version = "0.1.0"
description = "Ferramenta para professores particulares: gerenciamento de PDFs, OCR e geração de planos e exercícios com LLM."
requires-python = ">=3.9"
dependencies = [
    "streamlit>=1.28.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "pypdf2>=3.0.1",
    "pymupdf>=1.26.5",
    "pytesseract>=0.3.13",
    "pillow>=10.0.0",
    "opencv-python-headless>=4.13.0.92",  
    "python-pptx>=1.0.2",
    "python-docx>=1.1.0",
    "reportlab>=4.0.0",
    "beautifulsoup4>=4.12.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["utils"]